--- a/app/src/main/res/layout/drug_info.xml
+++ b/app/src/main/res/layout/drug_info.xml
@@ -5,20 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="helloworld"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:text="상세정보"
-        android:textSize="35sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,17 +43,6 @@
                 android:minWidth="25dp"
                 android:minHeight="25dp"
                 />
-            <TextView
-                android:id="@+id/stringName"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="*품목명" />
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="helloworld" />
 
             <TextView
                 android:id="@+id/detailStr"
